DRAKEN-2829: Implemented service layer
